feat: add collectivity and member creation APIs (A & B-2)
- POST /collectivities with federation approval and structure validation
- POST /members with sponsorship rules (min 2 referees for JUNIOR)
- JDBC repositories, no ORM